<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/noteContentTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Note_Content"
        android:textSize="18sp"
        android:textColor="#000000"
        android:padding="8dp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="start|bottom"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="9dp"/>


        <ImageButton
            android:id="@+id/add_button"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_gravity="end|bottom"
            android:background="@android:color/transparent"
            android:contentDescription="@string/add_note"
            android:scaleType="fitCenter"
            android:src="@drawable/add_button"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="14dp"/>

    </FrameLayout>

</LinearLayout>
